oqct-app/main/default/objects/DC_Configuration__c/DC_Configuration__c.object-meta.xml
<CustomObject>
    <description>This object stores the main configuration of the entire Data Clean process like the object for which masking/deletion is to be done, when it is to be scheduled, rollback needed or not, etc.</description>
    <label>DC-Configuration</label>
    <nameField>
        <displayFormat>DC-Config-{0000}</displayFormat>
        <label>DC Configuration Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DC-Configurations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>