oqct-app/main/default/objects/DC_Configuration__c/fields/Archive_Scheduled_Archive_DateTime_Init__c.field-meta.xml
<CustomField>
    <fullName>Archive_Scheduled_Archive_DateTime_Init__c</fullName>
    <description>The date-time after which the master object&apos;s record are/were initially scheduled to be archived after insertion in Data Clean. Available in Archive action only</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    Process_Scheduled_Date_Time_Init__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time after which the master object&apos;s record are/were initially scheduled to be archived after insertion in Data Clean. Available in Archive action only</inlineHelpText>
    <label>Archive-Scheduled Archive DateTime(Init)</label>
    <type>DateTime</type>
</CustomField>