oqct-app/main/default/objects/DC_Configuration__c/fields/Archive_Scheduled_Archive_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Archive_Scheduled_Archive_DateTime_Next__c</fullName>
    <description>The date-time on which the Archival process is scheduled for next run. Available in any Action that involves archiving</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    Process_Scheduled_Date_Time_Next__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time on which the Archival process is scheduled for next run. Available in any Action that involves archiving</inlineHelpText>
    <label>Archive-Scheduled Archive DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>