oqct-app/main/default/objects/DC_Configuration__c/fields/Archive_Scheduled_Delete_DateTime_Init__c.field-meta.xml
<CustomField>
    <fullName>Archive_Scheduled_Delete_DateTime_Init__c</fullName>
    <description>The date time scheduled for initial deletion of the old successfully archived records of master object.</description>
    <formula>CASE(
    TEXT(Data_Clean_Action__c),
    &apos;Archive + Deletion&apos;, Process2_Scheduled_DateTime_Init__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date time scheduled for initial deletion of the old successfully archived records of master object.</inlineHelpText>
    <label>Archive-Scheduled Delete DateTime(Init)</label>
    <type>DateTime</type>
</CustomField>