oqct-app/main/default/objects/DC_Configuration__c/fields/Backup_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Backup_Expiry_Date__c</fullName>
    <description>The date at which the backups will be automatically deleted in layman text</description>
    <formula>&apos;After &apos; + TEXT(Delete_Backups_After__c) + &apos; &apos; + TEXT(Delete_Backups_Unit__c) + &apos; (at &apos; + LEFT(TEXT(Delete_Backups_Time__c), 5) + &apos;) of Masking/Deletion Completion&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date at which the backups will be automatically deleted in layman text</inlineHelpText>
    <label>Backup Expiry Date</label>
    <type>Text</type>
</CustomField>