oqct-app/main/default/objects/DC_Configuration__c/fields/Cloning_Scheduled_Cloning_DateTime_Init__c.field-meta.xml
<CustomField>
    <fullName>Cloning_Scheduled_Cloning_DateTime_Init__c</fullName>
    <description>The date-time on which the Masking archive is/was scheduled initially</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;),
    Process_Scheduled_Date_Time_Init__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time on which the Masking archive is/was scheduled initially</inlineHelpText>
    <label>Cloning-Scheduled Cloning DateTime(Init)</label>
    <type>DateTime</type>
</CustomField>