oqct-app/main/default/objects/DC_Configuration__c/fields/Cloning_Scheduled_Cloning_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Cloning_Scheduled_Cloning_DateTime_Next__c</fullName>
    <description>The date-time on which the Cloning process is scheduled for next run. Available in any Action that involves Cloning</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Cloning&apos;),
    Process_Scheduled_Date_Time_Next__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time on which the Cloning process is scheduled for next run. Available in any Action that involves Cloning</inlineHelpText>
    <label>Cloning-Scheduled Cloning DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>