oqct-app/main/default/objects/DC_Configuration__c/fields/Configuration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Notes__c</fullName>
    <description>Any notes related to the configuration</description>
    <inlineHelpText>Any notes related to the configuration</inlineHelpText>
    <label>Configuration Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>