oqct-app/main/default/objects/DC_Configuration__c/fields/Data_Clean_Action__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Action__c</fullName>
    <description>The Data Clean Action to perform</description>
    <inlineHelpText>The Data Clean Action to perform</inlineHelpText>
    <label>Data Clean Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Actions</valueSetName>
    </valueSet>
</CustomField>