oqct-app/main/default/objects/DC_Configuration__c/fields/Data_Clean_Process_Start_After__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Process_Start_After__c</fullName>
    <description>The span after data in Data Clean Object is inserted for masking and/or deletion to initiate the process. Process will be scheduled after the days mentioned in this field via Trigger once the records are successfully inserted in Data Clean Object</description>
    <inlineHelpText>The span after data in Data Clean Object is inserted for masking and/or deletion to initiate the process. Process will be scheduled after the days mentioned in this field via Trigger once the records are successfully inserted in Data Clean Object</inlineHelpText>
    <label>Data Clean Process Start After</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>