oqct-app/main/default/objects/DC_Configuration__c/fields/Data_Clean_Process_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Process_Start_Time__c</fullName>
    <description>Preferred start time when the Data Clean Process (Masking or Deletion) Starts. Midnight time is recommended</description>
    <inlineHelpText>Preferred start time when the Data Clean Process (Masking or Deletion) Starts. Midnight time is recommended</inlineHelpText>
    <label>Data Clean Process Start Time</label>
    <type>Time</type>
</CustomField>