oqct-app/main/default/objects/DC_Configuration__c/fields/Data_Clean_Process_Start_Unit__c.field-meta.xml
<CustomField>
    <fullName>Data_Clean_Process_Start_Unit__c</fullName>
    <description>The time unit used for &apos;Data Clean Process Start After&apos; field</description>
    <inlineHelpText>The time unit used for &apos;Data Clean Process Start After&apos; field</inlineHelpText>
    <label>Data Clean Process Start Unit</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Time_Units</valueSetName>
    </valueSet>
</CustomField>