oqct-app/main/default/objects/DC_Configuration__c/fields/Delete_Backups_After__c.field-meta.xml
<CustomField>
    <fullName>Delete_Backups_After__c</fullName>
    <description>The span after which the backup files will be automatically deleted</description>
    <inlineHelpText>The span after which the backup files will be automatically deleted</inlineHelpText>
    <label>Delete Backups After</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>