oqct-app/main/default/objects/DC_Configuration__c/fields/Delete_Backups_Time__c.field-meta.xml
<CustomField>
    <fullName>Delete_Backups_Time__c</fullName>
    <description>Preferred start time when the auto-deletion of backups will be done</description>
    <inlineHelpText>Preferred start time when the auto-deletion of backups will be done</inlineHelpText>
    <label>Delete Backups Time</label>
    <type>Time</type>
</CustomField>