oqct-app/main/default/objects/DC_Configuration__c/fields/Delete_Backups_Unit__c.field-meta.xml
<CustomField>
    <fullName>Delete_Backups_Unit__c</fullName>
    <description>The time unit used for &apos;Delete Backups After&apos; field</description>
    <inlineHelpText>The time unit used for &apos;Delete Backups After&apos; field</inlineHelpText>
    <label>Delete Backups Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Clean_Time_Units</valueSetName>
    </valueSet>
</CustomField>