oqct-app/main/default/objects/DC_Configuration__c/fields/Delete_Scheduled_Delete_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Delete_Scheduled_Delete_DateTime_Next__c</fullName>
    <description>The date-time after which the master object&apos;s record are next scheduled to be deleted after insertion in Data Clean. Available in Action &apos;Deletion&apos; and &apos;Deletion + Rollback&apos;</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    Process_Scheduled_Date_Time_Next__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time after which the master object&apos;s record are next scheduled to be deleted after insertion in Data Clean. Available in Action &apos;Deletion&apos; and &apos;Deletion + Rollback&apos;</inlineHelpText>
    <label>Delete-Scheduled Delete DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>