oqct-app/main/default/objects/DC_Configuration__c/fields/Email_Ids_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Email_Ids_to_Notify__c</fullName>
    <description>Email Ids on which process completion notification will be send</description>
    <inlineHelpText>Email Ids on which process completion notification will be send</inlineHelpText>
    <label>Email Ids to Notify</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>