oqct-app/main/default/objects/DC_Configuration__c/fields/Error_Email_Ids_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Error_Email_Ids_to_Notify__c</fullName>
    <description>Email Ids on which will be notified in case of errors</description>
    <inlineHelpText>Email Ids on which will be notified in case of errors</inlineHelpText>
    <label>Error Email Ids to Notify</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>