oqct-app/main/default/objects/DC_Configuration__c/fields/Is_Configuration_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Configuration_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicate that the current Data Clean Configuration is Active if TRUE, inactive if FALSE. There can only be one configuration active per object</description>
    <inlineHelpText>Indicate that the current Data Clean Configuration is Active if TRUE, inactive if FALSE. There can only be one configuration active per object</inlineHelpText>
    <label>Is Configuration Active</label>
    <type>Checkbox</type>
</CustomField>