oqct-app/main/default/objects/DC_Configuration__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <description>The id of the scheduled job (can be reoccurring) associated with the configuration</description>
    <inlineHelpText>The id of the scheduled job (can be reoccurring) associated with the configuration</inlineHelpText>
    <label>Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>