oqct-app/main/default/objects/DC_Configuration__c/fields/Job_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Job_Submit_Date__c</fullName>
    <description>The date-time at which the job was submitted initially on Data Clean record insertion</description>
    <inlineHelpText>The date-time at which the job was submitted initially on Data Clean record insertion</inlineHelpText>
    <label>Job Submit Date</label>
    <type>DateTime</type>
</CustomField>