oqct-app/main/default/objects/DC_Configuration__c/fields/Last_Activated_Deactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Activated_Deactivated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who last activated or deactivated the dc-configuration</description>
    <inlineHelpText>The user who last activated or deactivated the dc-configuration</inlineHelpText>
    <label>Last Activated/Deactivated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DC_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>