oqct-app/main/default/objects/DC_Configuration__c/fields/Masking_Scheduled_Delete_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Masking_Scheduled_Delete_DateTime_Next__c</fullName>
    <description>The date time scheduled for deletion of the old successfully masked records of master object</description>
    <formula>CASE(
    TEXT(Data_Clean_Action__c),
    &apos;Masking + Deletion&apos;, Process2_Scheduled_DateTime_Next__c,
    &apos;Masking + Rollback + Deletion&apos;, Process2_Scheduled_DateTime_Next__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date time scheduled for deletion of the old successfully masked records of master object</inlineHelpText>
    <label>Masking-Scheduled Delete DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>