oqct-app/main/default/objects/DC_Configuration__c/fields/Masking_Scheduled_Masking_DateTime_Init__c.field-meta.xml
<CustomField>
    <fullName>Masking_Scheduled_Masking_DateTime_Init__c</fullName>
    <description>The date-time on which the Masking process is/was scheduled initially</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Masking&apos;),
    Process_Scheduled_Date_Time_Init__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time on which the Masking process is/was scheduled initially</inlineHelpText>
    <label>Masking-Scheduled Masking DateTime(Init)</label>
    <type>DateTime</type>
</CustomField>