oqct-app/main/default/objects/DC_Configuration__c/fields/Masking_Scheduled_Masking_DateTime_Next__c.field-meta.xml
<CustomField>
    <fullName>Masking_Scheduled_Masking_DateTime_Next__c</fullName>
    <description>The date-time on which the Masking process is scheduled for next run. Available in any Action that involves Masking</description>
    <formula>IF(
    CONTAINS(TEXT(Data_Clean_Action__c), &apos;Masking&apos;),
    Process_Scheduled_Date_Time_Next__c,
    null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date-time on which the Masking process is scheduled for next run. Available in any Action that involves Masking</inlineHelpText>
    <label>Masking-Scheduled Masking DateTime(Next)</label>
    <type>DateTime</type>
</CustomField>