oqct-app/main/default/objects/DC_Configuration__c/fields/Master_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Deletion_Status__c</fullName>
    <description>The deletion status of the master object records itself (does not include deletion status for the child records)</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !(Total_Parent_Job_Not_Completed_Delete__c = 0),
        &apos;Pending&apos;,
        IF(
            AND(Total_Master_Success_Deletion__c &gt; 0, Total_Master_Failure_Deletion__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Total_Master_Success_Deletion__c = 0, Total_Master_Failure_Deletion__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Total_Master_Success_Deletion__c &gt; 0, Total_Master_Failure_Deletion__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Total_Master_Success_Deletion__c = 0, Total_Master_Failure_Deletion__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The deletion status of the master object records itself (does not include deletion status for the child records)</inlineHelpText>
    <label>Master Deletion Status</label>
    <type>Text</type>
</CustomField>