oqct-app/main/default/objects/DC_Configuration__c/fields/Master_Object_Match_By_Field_Apex_Type__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Match_By_Field_Apex_Type__c</fullName>
    <description>Data Type in apex for Match By Field on Master Object (For External Ids, only two possible data types: String, Decimal)</description>
    <inlineHelpText>Data Type in apex for Match By Field on Master Object</inlineHelpText>
    <label>Master Object Match By Field Apex Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>