oqct-app/main/default/objects/DC_Configuration__c/fields/Master_Object_Match_By_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Match_By_Field_Name__c</fullName>
    <description>The API name of the field for which the code will match the DC-Configuration master object&apos;s records to Data Clean object&apos;s records based on Data Clean record&apos;s Master Id</description>
    <inlineHelpText>The API name of the field for which the code will match the DC-Configuration master object&apos;s records to Data Clean object&apos;s records based on Data Clean record&apos;s Master Id</inlineHelpText>
    <label>Master Object Match By Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>