oqct-app/main/default/objects/DC_Configuration__c/fields/Master_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Name__c</fullName>
    <description>The objects whose records need to be masked/deleted</description>
    <inlineHelpText>The objects whose records need to be masked/deleted</inlineHelpText>
    <label>Master Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>