oqct-app/main/default/objects/DC_Configuration__c/fields/Master_Rollback_Status__c.field-meta.xml
<CustomField>
    <fullName>Master_Rollback_Status__c</fullName>
    <description>The rollback status of the master object’s records. This does not include rollback status of related object’s records</description>
    <formula>IF(
    !OR(
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Rollback&apos;),
        CONTAINS(TEXT(Data_Clean_Action__c), &apos;Archive&apos;)
    ),
    &apos;Not Eligible&apos;,
    IF(
        !(Total_Parent_Job_Not_Completed_Rollback__c = 0),
        &apos;Pending&apos;,
        IF(
            AND(Total_Master_Success_Rollback__c &gt; 0, Total_Master_Failure_Rollback__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Total_Master_Success_Rollback__c = 0, Total_Master_Failure_Rollback__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Total_Master_Success_Rollback__c &gt; 0, Total_Master_Failure_Rollback__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Total_Master_Success_Rollback__c = 0, Total_Master_Failure_Rollback__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The rollback status of the master object’s records. This does not include rollback status of related object’s records</inlineHelpText>
    <label>Master Rollback Status</label>
    <type>Text</type>
</CustomField>