oqct-app/main/default/objects/DC_Configuration__c/fields/Overall_Deletion_Status__c.field-meta.xml
<CustomField>
    <fullName>Overall_Deletion_Status__c</fullName>
    <description>The deletion status of the object records and all it’s related child object’s records combined The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</description>
    <formula>IF(
    !CONTAINS(TEXT(Data_Clean_Action__c), &apos;Deletion&apos;),
    &apos;Not Eligible&apos;,
    IF(
        !(Total_Job_Not_Completed_Deletion__c = 0),
        &apos;Pending&apos;,
        IF(
            AND(Overall_Success_Deletion__c &gt; 0, Overall_Failure_Deletion__c = 0),
            &apos;Success&apos;,
            IF(
                AND(Overall_Success_Deletion__c = 0, Overall_Failure_Deletion__c &gt; 0),
                &apos;Failed&apos;,
                IF(
                    AND(Overall_Success_Deletion__c &gt; 0, Overall_Failure_Deletion__c &gt; 0),
                    &apos;Partial Success&apos;,
                    IF(
                        AND(Overall_Success_Deletion__c = 0, Overall_Failure_Deletion__c = 0),
                        &apos;No Records Found&apos;,
                        null
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The deletion status of the object records and all it’s related child object’s records combined The picklist takes its values from the Global Picklist ‘Data Clean Treatment Status’</inlineHelpText>
    <label>Overall Deletion Status</label>
    <type>Text</type>
</CustomField>